secondfile/objects/Promotion_Engine__c.object
<CustomObject>
    <fields>
        <fullName>Activation_Date__c</fullName>
        <label>Rule Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Also_Apply_on_Failure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Also Apply on Failure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BCC_Code__c</fullName>
        <label>BCC Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCC_Template__c</fullName>
        <label>BCC Template</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Boolean_Logic__c</fullName>
        <label>Boolean Logic</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Category_Order__c</fullName>
        <label>Category Order</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Rule_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Criteria_Filter__c</fullName>
        <description>Creating to handle conditions like 1 and 2 or 3</description>
        <label>Criteria Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Criteria_Name__c</fullName>
        <label>Criteria Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currently_Active_Value__c</fullName>
        <formula>IF( Currently_Active__c , &apos;True&apos;, &apos;False&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currently Active Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currently_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Currently Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deal_Reg_Discount_On_Failure__c</fullName>
        <label>Deal Reg Discount On Failure</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Deal_Reg_Discount_On_Success__c</fullName>
        <label>Deal Reg Discount On Success</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Default_Deal_Reg_Decision__c</fullName>
        <label>Default Deal Reg Decision</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approve</fullName>
                </value>
                <value>
                    <fullName>Deny</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discount_Percentage__c</fullName>
        <label>Discount Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Rule End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Input_Data_Type__c</fullName>
        <label>Input Data Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <formula>AND( Activation_Date__c &lt; TODAY() , Expiration_Date__c &gt; TODAY() , Currently_Active__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Custom_Boolean_Logic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Custom Boolean Logic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_Of_Criterias__c</fullName>
        <label>Number Of Criterias</label>
        <summaryForeignKey>Criteria__c.Promotion_Engine__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Operator_Formula__c</fullName>
        <formula>CASE(Operator__c,
&quot;&gt;&quot;, 0,
&quot;&lt;&quot;, 1,
&quot;=&quot;, 2,
&quot;!=&quot;, 3,
4)</formula>
        <label>Operator Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&gt;</fullName>
                </value>
                <value>
                    <fullName>&lt;</fullName>
                </value>
                <value>
                    <fullName>=</fullName>
                </value>
                <value>
                    <fullName>!=</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OptyInputField__c</fullName>
        <label>OptyInputField</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Discount_Percentage__c</fullName>
        <label>Product Discount Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AVPN</fullName>
                </value>
                <value>
                    <fullName>MIS</fullName>
                </value>
                <value>
                    <fullName>ANIRA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Promotion_Description__c</fullName>
        <label>Rule Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Promotion_Name__c</fullName>
        <label>Rule Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <label>Rank</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rule_Category__c</fullName>
        <label>Rule Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Duplicate EC &amp; Product</fullName>
                </value>
                <value>
                    <fullName>Product Level Discount</fullName>
                </value>
                <value>
                    <fullName>SP Account</fullName>
                </value>
                <value>
                    <fullName>SP Type</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Valid_For_Product__c</fullName>
        <label>Valid For Product</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Auto Rules Engine</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Rule_Category__c</columns>
        <columns>Promotion_Name__c</columns>
        <columns>Rank__c</columns>
        <columns>BCC_Code__c</columns>
        <columns>Category_Order__c</columns>
        <columns>Currently_Active__c</columns>
        <columns>Activation_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Active</fullName>
        <columns>NAME</columns>
        <columns>Rule_Category__c</columns>
        <columns>Promotion_Name__c</columns>
        <columns>Rank__c</columns>
        <columns>Category_Order__c</columns>
        <columns>Currently_Active__c</columns>
        <columns>Activation_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Currently_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>AllActive</label>
    </listViews>
    <nameField>
        <displayFormat>PE-{00000}</displayFormat>
        <label>Rule Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Auto Rules Engine</pluralLabel>
    <recordTypes>
        <fullName>FullAccess</fullName>
        <active>true</active>
        <label>FullAccess</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>SystemAdminAccessOnly</fullName>
        <active>false</active>
        <errorConditionFormula>if($Profile.Name != &apos;System Administrator&apos;,true, false)</errorConditionFormula>
        <errorDisplayField>Also_Apply_on_Failure__c</errorDisplayField>
        <errorMessage>Only System Admin can modify the Rule</errorMessage>
    </validationRules>
</CustomObject>